welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:25: error: not found: value False
		lignePaire=False
                           ^ZigZag:33: error: not found: value True
		lignePaire=True
                           ^